--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,7 @@
+streamlit==1.27.0
+pip==23.2.1
 plotly_express==0.4.0
-matplotlib==3.4.3
-openpyxl
+openpyxl==3.1.0
+matplotlib==3.8.0
+seaborn==0.13.0
 
